[gd_scene load_steps=5 format=3 uid="uid://db4lsbt241yap"]

[ext_resource type="Script" uid="uid://cg6qqhu22150u" path="res://gameplay/player/weapon_beam.gd" id="1_eu4ay"]
[ext_resource type="Shader" uid="uid://cu6qf4wfbwnbp" path="res://assets/shaders/mining_laser.tres" id="2_72x5g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5eoi3"]
render_priority = 0
shader = ExtResource("2_72x5g")
shader_parameter/ColorParameter2 = Color(1.3573508, 1.0096953, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_eu4ay"]
material = SubResource("ShaderMaterial_5eoi3")
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[node name="BeamWeapon" type="Node3D"]
script = ExtResource("1_eu4ay")

[node name="Fire_Rate_Timer" type="Timer" parent="."]
one_shot = true

[node name="Rotation_Handle" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)

[node name="Beam_Mesh" type="MeshInstance3D" parent="Rotation_Handle"]
mesh = SubResource("CylinderMesh_eu4ay")
skeleton = NodePath("../..")
